# PDC_leo

./: .gitignore  BUILD_X86_README.md  CMakeLists.txt  FINAL_TEST_INSTRUCTIONS.md  KIOSK_SHELL_MIGRATION.md  README.md  RUN_COMMANDS.md  RUN_TEST_SYSTEM.md  SINGLE_WESTON_MIGRATION_COMPLETE.md  run-jetson-all.sh  run-jetson-eglfs-compositor.sh  run-jetson-eglfs-test.sh  run-jetson-single-weston.sh  run-jetson-wayland-full.sh  run-jetson-wayland.sh  run-jetson-x11-test.sh  run-rpi-all.sh  run-x86-all.sh  run-x86-simple.sh  start-weston.sh  stop-jetson-single-weston.sh  stop-rpi-all.sh  stop-x86-all.sh
.github/workflows/: build_test.yml  ci-cd.yml
HelloWorld/: CMakeLists.txt  FRESH_START_PLAN.md
HelloWorld/confg/: HelloWorld.fdepl  HelloWorld.fidl
HelloWorld/src/: HelloWorldClient.cpp  HelloWorldService.cpp  HelloWorldStubImpl.cpp  HelloWorldStubImpl.hpp
app/: oe-logs  oe-workdir
app/AmbientApp/: CMakeLists.txt  build.sh  commonapi_ambient.ini  oe-logs  oe-workdir  qml.qrc  run.sh  run_wayland0.sh  vsomeip_ambient.json
app/AmbientApp/qml/: AmbientLighting.qml  AmbientLighting.qml.backup
app/AmbientApp/src/: AmbientControlStubImpl.cpp  AmbientControlStubImpl.h  MediaControlClient.cpp  MediaControlClient.h  VehicleControlClient.cpp  VehicleControlClient.h  ambientmanager.cpp  ambientmanager.h  main.cpp  main.cpp.backup
app/GearApp/: CMakeLists.txt  build.sh  oe-logs  oe-workdir  qml.qrc  run.sh  run_local.sh  run_wayland0.sh
app/GearApp/config/: commonapi_ecu2.ini  vsomeip_ecu2.json
app/GearApp/qml/: GearSelectionWidget.qml  main.qml
app/GearApp/src/: VehicleControlClient.cpp  VehicleControlClient.h  gearmanager.cpp  gearmanager.cpp.backup  gearmanager.h  gearmanager.h.backup  main.cpp  main.cpp.backup
app/HU_MainApp/: CMakeLists_compositor.txt  README_COMPOSITOR.md  build_compositor.sh  eglfs_kms_config.json  oe-logs  oe-workdir  qml_compositor.qrc  run_compositor.sh
app/HU_MainApp/build_compositor/: CMakeCache.txt  HU_MainApp_Compositor  Makefile  cmake_install.cmake
app/HU_MainApp/old_single_process_version/: AmbientPage.qml  CMakeLists.txt  HomePage.qml  MediaPage.qml  README.md  VehiclePage.qml  commonapi.ini  compositor.qml  compositor_old_backup.qml  main.cpp  main.qml  qml.qrc  vsomeip.json
app/HU_MainApp/qml/: CompositorLayout.qml  SurfaceRouter.qml  compositor_modular.qml
app/HomeScreenApp/: CMakeLists.txt  build.sh  commonapi_homescreen.ini  oe-logs  oe-workdir  qml.qrc  run.sh  run_wayland0.sh  vsomeip_homescreen.json
app/HomeScreenApp/qml/: HomeScreen.qml
app/HomeScreenApp/src/: AmbientControlClient.cpp  AmbientControlClient.h  MediaControlClient.cpp  MediaControlClient.h  homescreenmanager.cpp  homescreenmanager.h  main.cpp
app/IC_app/: App.qrc  CMakeLists.txt  build.sh  caninterface.cpp  caninterface.h  commonapi.ini  main.cpp  oe-logs  oe-workdir  run.sh  vehiclecontrolclient.cpp  vehiclecontrolclient.h  vsomeip_ic.json
app/IC_app/Design/: CMakeLists.txt  Constants.qml  EventListModel.qml  EventListSimulator.qml
app/IC_app/DesignContent/: App.qml  CMakeLists.txt  Screen01.qml  Screen01Form.ui.qml
app/IC_app/autogen/: environment.h
app/IVILayoutController/: CMakeLists.txt  build.sh  run.sh
app/IVILayoutController/src/: main.cpp  png_stub.cpp
app/LayoutManagerApp/: CMakeLists.txt  build.sh  qml.qrc  run_wayland0.sh
app/LayoutManagerApp/qml/: LayoutManager.qml
app/LayoutManagerApp/src/: main.cpp
app/MediaApp/: CMakeLists.txt  CMakeLists.txt.bak  build.sh  commonapi.ini  oe-logs  oe-workdir  qml.qrc  run.sh  run_wayland0.sh  vsomeip.json
app/MediaApp/qml/: MediaApp.qml
app/MediaApp/src/: AmbientControlClient.cpp  AmbientControlClient.h  MediaControlStubImpl.cpp  MediaControlStubImpl.h  ambientthememanager.cpp  ambientthememanager.h  main.cpp  mediamanager.cpp  mediamanager.h
app/VehicleControlECU/: CMakeLists.txt  QUICK_DEPLOY.md  README.md  YOCTO_BUILD_INFO.md  YOCTO_LAYER_GUIDE.md  build.sh  build_vsomeip_rpi.sh  cleanup_x86_libs.sh  deploy_to_rpi.sh  install_boost.sh  install_dependencies.sh  run.sh  vehiclecontrol-ecu.service
app/VehicleControlECU/config/: README.md  commonapi_ecu1.ini  vsomeip_ecu1.json
app/VehicleControlECU/lib/: Adafruit_INA219.cpp  Adafruit_INA219.hpp  Adafruit_PCA9685.cpp  Adafruit_PCA9685.hpp  ShanwanGamepad.cpp  ShanwanGamepad.hpp
app/VehicleControlECU/recipes-commonapi/: commonapi-core_3.2.4.bb  commonapi-someip_3.2.4.bb
app/VehicleControlECU/recipes-vsomeip/: vsomeip_3.5.8.bb
app/VehicleControlECU/src/: BatteryMonitor.cpp  BatteryMonitor.h  CANInterface.cpp  CANInterface.h  GamepadHandler.cpp  GamepadHandler.h  PiRacerController.cpp  PiRacerController.h  VehicleControlStubImpl.cpp  VehicleControlStubImpl.h  main.cpp
app/config/: README.md  rebuild-all-apps.sh  routing_manager_ecu2.json  start_all_ecu2.sh  start_all_ecu2_simple.sh  start_ecu1.sh  start_routing_manager_ecu2.sh
commonapi/: generate_code.sh
commonapi/fidl/: AmbientControl.fdepl  AmbientControl.fidl  MediaControl.fdepl  MediaControl.fidl  VehicleControl.fdepl  VehicleControl.fidl
commonapi/vehiclecontrol/: CMakeLists.txt
config/: ivi-layout-single-display.py  weston-single-dp-ivi.ini
docs/: CAN_MCP2518FD_DEPLOYMENT_SUCCESS.md  CHANGELOG_20251204_VSOMEIP_EXTERNAL_COMM.md  DUAL_DISPLAY_WITHOUT_COMPOSITOR.md  ECU2_TESTING_GUIDE.md  JETSON_INTEGRATION_PLAN.md  JETSON_INTEGRATION_ROADMAP_REVISED.md  JETSON_ORIN_NANO_DP_MST_ANALYSIS.md  JETSON_ORIN_NANO_ECU2_SETUP.md  JETSON_WESTON_WAYLAND_GUIDE.md  JETSON_YOCTO_BUILD_PLAN.md  PROJECT_REVIEW.md  TODO_ECU1_PERMANENT_FIX.md  VSOMEIP_EXTERNAL_COMMUNICATION_PLAN.md  VSOMEIP_RASPIOS_IMPLEMENTATION_GUIDE.md  YOCTO_BUILD_CONSIDERATIONS.md
install_folder/lib/: libCommonAPI-SomeIP.so.3.2.4  libCommonAPI.so.3.2.4  libvsomeip3-cfg.so.3  libvsomeip3-e2e.so.3  libvsomeip3-e2e.so.3.5.8  libvsomeip3-sd.so.3  libvsomeip3.so.3
meta/: ECU2_LAYER_RESTRUCTURE.md  ECU2_VSOMEIP_EXTERNAL_COMMUNICATION.md  README.md
meta/meta-headunit/: README-CONFIGURATION.md  README.md
meta/meta-instrumentcluster/: README.md
meta/meta-middleware/: README.md
(+92 files in other folders)
